Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>   
   <button onclick="salvarRegistro()">Salvar</button>
 <label>Valor da hora extra (R$):
-      <input type="number" step="0.01" id="valorHoraExtra" value="">
+      <input type="number" step="0.01" id="valorHoraExtra" value="19,60">
 </label>
   <h2>Consultar Registros</h2>
   <label>Escolha o mês:
