--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <title>Calculadora de Jornada</title>
@@ -28,10 +27,10 @@
       margin-top: 1px;
       border-radius: 20px
     }
-  .apoio{
-    color: white;
-    font-size: 80%;
-  }
+    .apoio{
+      color: white;
+      font-size: 80%;
+    }
     header { background:black; color:white; display:flex; align-items:center; justify-content:center; padding:50px 0; }
     h1 { font-size:70px; }
     h2 { display:flex; align-items:center; justify-content:center; margin-top:20px; font-size:60px; }
@@ -67,276 +66,105 @@
       </div>
       <button type="button" onclick="adicionarPausa()">➕ Nova Pausa</button>
     </label>
-    
-  </div>   
+  </div>
   <button onclick="salvarRegistro()">Salvar</button>
-<label>Valor da hora extra (R$):
+  <label>Valor da hora extra (R$):
       <input type="number" step="0.01" id="valorHoraExtra" value="19,60">
-</label>
+  </label>
   <h2>Consultar Registros</h2>
   <label>Escolha o mês:
     <input type="month" id="mesConsulta">
   </label>
   <button onclick="mostrarRegistros()">Consultar</button>
-  
   <button onclick="apagarTodosRegistros()">Apagar Todos</button>
-    <button onclick="exportarParaPDF()">Exportar para PDF</button>
-
-  <div id="registros"></div>
-  <div class="resultado" id="resumo"></div>
-    <footer>Sistema criado por Paulo Renato
+  <button onclick="exportarParaPDF()">Exportar para PDF</button>  <div id="registros"></div>
+  <div class="resultado" id="resumo"></div>  <footer>Sistema criado por Paulo Renato
     <h4 class="apoio">
       ajude a aprimorar e desenvolver mais app como este, qualquer valor será muito bem vindo!
     </h4>
-      <button class="pix" onclick="copiarChavePix()">Copiar chave PIX</button>
-    </div>
-  </footer>
+    <button class="pix" onclick="copiarChavePix()">Copiar chave PIX</button>
+  </footer><script>
+function adicionarPausa(inicio = '', fim = '') {
+  const container = document.getElementById('pausasContainer');
+  const div = document.createElement('div');
+  div.className = 'pausa';
+  div.innerHTML = `
+    <input type="time" class="inicioPausa" value="${inicio}"> às
+    <input type="time" class="fimPausa" value="${fim}">
+    <button type="button" onclick="this.parentElement.remove()">❌</button>
+  `;
+  container.appendChild(div);
+}
 
-  <script>
-    document.getElementById('data').addEventListener('change', () => {
-      const agora = new Date();
-      const hora = agora.toTimeString().slice(0, 5);
-      document.getElementById('inicioJornada').value = hora;
-      document.getElementById('fimJornada').value = hora;
-      document.querySelectorAll('.inicioPausa, .fimPausa').forEach(el => el.value = hora);
-    });
+function mostrarRegistros() {
+  const mesConsulta = document.getElementById('mesConsulta').value;
+  if (!mesConsulta) return alert("Selecione um mês.");
 
-    function adicionarPausa(inicio = '', fim = '') {
-      const container = document.getElementById('pausasContainer');
-      const div = document.createElement('div');
-      div.className = 'pausa';
-      div.innerHTML = `
-        <input type="time" class="inicioPausa" value="${inicio}"> às 
-        <input type="time" class="fimPausa" value="${fim}">
-        <button type="button" onclick="this.parentElement.remove()">❌</button>
-      `;
-      container.appendChild(div);
-    }
+  const [ano, mes] = mesConsulta.split('-').map(Number);
+  const dataInicio = new Date(ano, mes - 1, 16);
+  const dataFim = new Date(ano, mes, 15);
 
-    function limparCampos() {
-      document.getElementById('data').value = '';
-      document.getElementById('inicioJornada').value = '';
-      document.getElementById('fimJornada').value = '';
-      document.getElementById('valorHoraExtra').value = '';
-      document.getElementById('pausasContainer').innerHTML = `
-        <div class="pausa">
-          <input type="time" class="inicioPausa"> às
-          <input type="time" class="fimPausa">
+  const registros = JSON.parse(localStorage.getItem('registros')) || [];
+  const container = document.getElementById('registros');
+  const resumo = document.getElementById('resumo');
+  container.innerHTML = '';
+
+  let totalMinutos = 0;
+  let totalExtrasMin = 0;
+
+  for (const r of registros) {
+    const [dia, mesR, anoR] = r.data.split('/').map(Number);
+    const dataRegistro = new Date(2000 + anoR, mesR - 1, dia);
+
+    if (dataRegistro >= dataInicio && dataRegistro <= dataFim) {
+      const jornadaMin = calcularDuracao(r.inicioJornada, r.fimJornada);
+      let pausaMin = 0;
+      if (Array.isArray(r.pausas)) {
+        for (const p of r.pausas) pausaMin += calcularDuracao(p.inicio, p.fim);
+      }
+      const trabalhado = jornadaMin - pausaMin;
+      container.innerHTML += `
+        <div class="registro">
+          <strong>${r.data}</strong><br>
+          Jornada: ${r.inicioJornada} às ${r.fimJornada}<br>
+          Pausas:<br>${r.pausas?.map(p => `${p.inicio} às ${p.fim}`).join('<br>') || '--'}<br>
+          Trabalhado: ${formatarTempo(trabalhado)}<br>
+          <button onclick="editarRegistro(${registros.indexOf(r)})" style="margin-top:5px; background:orange; color:white;">✏️ Editar</button>
+          <button onclick="excluirRegistro(${registros.indexOf(r)})" style="margin-top:5px; background:red; color:white;">🗑️ Excluir</button>
         </div>
       `;
+      totalMinutos += trabalhado;
     }
-
-    function salvarRegistro() {
-      const dataRaw = document.getElementById('data').value;
-      if (!dataRaw) return alert("Informe a data!");
-
-      const [ano, mes, dia] = dataRaw.split('-');
-      const data = `${dia}/${mes}/${ano.slice(2)}`;
-      const inicioJornada = document.getElementById('inicioJornada').value;
-      const fimJornada = document.getElementById('fimJornada').value;
-
-      const pausas = [];
-      document.querySelectorAll('.pausa').forEach(p => {
-        const inicio = p.querySelector('.inicioPausa').value;
-        const fim = p.querySelector('.fimPausa').value;
-        if (inicio && fim) pausas.push({ inicio, fim });
-      });
-
-      if (!inicioJornada || !fimJornada) {
-        alert('Preencha os horários corretamente!');
-        return;
-      }
-
-      const registros = JSON.parse(localStorage.getItem('registros')) || [];
-      registros.push({ data, inicioJornada, fimJornada, pausas });
-      localStorage.setItem('registros', JSON.stringify(registros));
-      alert("Registro salvo com sucesso!");
-      limparCampos();
-    }
-
-    function calcularDuracao(inicio, fim) {
-      const [hi, mi] = inicio.split(':').map(Number);
-      const [hf, mf] = fim.split(':').map(Number);
-      return (hf * 60 + mf) - (hi * 60 + mi);
-    }
-
-    function formatarTempo(minutos) {
-      const h = String(Math.floor(minutos / 60)).padStart(2, '0');
-      const m = String(minutos % 60).padStart(2, '0');
-      return `${h}:${m}`;
-    }
-
-    function mostrarRegistros() {
-      const mesConsulta = document.getElementById('mesConsulta').value;
-      if (!mesConsulta) return alert("Selecione um mês.");
-
-      const [ano, mes] = mesConsulta.split('-').map(Number);
-      const dataInicio = new Date(ano, mes - 1, 16);
-      const dataFim = new Date(ano, mes, 15);
-
-      const registros = JSON.parse(localStorage.getItem('registros')) || [];
-      const container = document.getElementById('registros');
-      const resumo = document.getElementById('resumo');
-      container.innerHTML = '';
-
-      let totalMinutos = 0;
-      let totalExtrasMin = 0;
-
-      for (const r of registros) {
-        const [dia, mesR, anoR] = r.data.split('/').map(Number);
-        const dataRegistro = new Date(2000 + anoR, mesR, dia);
-
-        if (dataRegistro >= dataInicio && dataRegistro <= dataFim) {
-          const jornadaMin = calcularDuracao(r.inicioJornada, r.fimJornada);
-          let pausaMin = 0;
-          if (Array.isArray(r.pausas)) {
-            for (const p of r.pausas) {
-              pausaMin += calcularDuracao(p.inicio, p.fim);
-            }
-          }
-
-          const trabalhado = jornadaMin - pausaMin;
-          container.innerHTML += `
-            <div class="registro">
-              <strong>${r.data}</strong><br>
-              Jornada: ${r.inicioJornada} às ${r.fimJornada}<br>
-              Pausas:<br> ${r.pausas?.map(p => `${p.inicio} às ${p.fim}`).join('<br>') || '--'}<br>
-              Trabalhado: ${formatarTempo(trabalhado)}<br>
-              <button onclick="editarRegistro(${registros.indexOf(r)})" style="margin-top:5px; background:orange; color:white;">✏️ Editar</button>
-              <button onclick="excluirRegistro(${registros.indexOf(r)})" style="margin-top:5px; background:red; color:white;">🗑️ Excluir</button>
-            </div>
-          `;
-
-          totalMinutos += trabalhado;
-        }
-      }
-
-      const valorExtras = parseFloat(document.getElementById('valorHoraExtra').value) || 0;
-      const diasNoPeriodo = (dataFim - dataInicio) / (1000 * 60 * 60 * 24) + 1;
-      const limiteMinutos = diasNoPeriodo >= 31 ? 194 * 60 + 51 : 189 * 60 + 34;
-
-      if (totalMinutos > limiteMinutos) {
-        totalExtrasMin = totalMinutos - limiteMinutos;
-      }
-
-      resumo.innerHTML = `
-        Total trabalhado: ${formatarTempo(totalMinutos)}<br>
-        Horas extras: ${formatarTempo(totalExtrasMin)}<br>
-        Valor horas extras: R$ ${(totalExtrasMin / 60 * valorExtras).toFixed(2)}
-      `;
-    }
-
-    function editarRegistro(indice) {
-      const registros = JSON.parse(localStorage.getItem('registros')) || [];
-      const r = registros[indice];
-
-      const [dia, mes, ano] = r.data.split('/');
-      document.getElementById('data').value = `20${ano}-${mes.padStart(2, '0')}-${dia.padStart(2, '0')}`;
-      document.getElementById('inicioJornada').value = r.inicioJornada;
-      document.getElementById('fimJornada').value = r.fimJornada;
-
-      document.getElementById('pausasContainer').innerHTML = '';
-      if (Array.isArray(r.pausas)) {
-        r.pausas.forEach(p => adicionarPausa(p.inicio, p.fim));
-      }
-
-      const btnSalvar = document.querySelector('button[onclick^="salvarRegistro"]');
-      btnSalvar.onclick = () => {
-        registros[indice] = {
-          data: r.data,
-          inicioJornada: document.getElementById('inicioJornada').value,
-          fimJornada: document.getElementById('fimJornada').value,
-          pausas: Array.from(document.querySelectorAll('.pausa')).map(p => ({
-            inicio: p.querySelector('.inicioPausa').value,
-            fim: p.querySelector('.fimPausa').value
-          }))
-        };
-        localStorage.setItem('registros', JSON.stringify(registros));
-        alert("Registro editado com sucesso!");
-        mostrarRegistros();
-        limparCampos();
-        btnSalvar.onclick = salvarRegistro;
-      };
-    }
-
-    function excluirRegistro(indice) {
-      const registros = JSON.parse(localStorage.getItem('registros')) || [];
-      if (confirm("Deseja realmente excluir este registro?")) {
-        registros.splice(indice, 1);
-        localStorage.setItem('registros', JSON.stringify(registros));
-        mostrarRegistros();
-      }
-    }
-
-    function apagarTodosRegistros() {
-      if (confirm("Deseja apagar todos os registros?")) {
-        localStorage.removeItem('registros');
-        document.getElementById('registros').innerHTML = '';
-        document.getElementById('resumo').innerHTML = '';
-      }
-    }
-
-    async function exportarParaPDF() {
-      const mesConsulta = document.getElementById('mesConsulta').value;
-      if (!mesConsulta) return alert("Selecione um mês para exportar.");
-
-      const [ano, mes] = mesConsulta.split('-').map(Number);
-      const dataInicio = new Date(ano, mes - 1, 16);
-      const dataFim = new Date(ano, mes, 15);
-
-      const registros = JSON.parse(localStorage.getItem('registros')) || [];
-
-      const dadosTabela = [];
-
-      for (const r of registros) {
-        const [dia, mesR, anoR] = r.data.split('/').map(Number);
-        const dataRegistro = new Date(2000 + anoR, mesR - 1, dia);
-        if (dataRegistro >= dataInicio && dataRegistro <= dataFim) {
-          const jornadaMin = calcularDuracao(r.inicioJornada, r.fimJornada);
-          let pausaMin = 0;
-          if (Array.isArray(r.pausas)) {
-            for (const p of r.pausas) {
-              pausaMin += calcularDuracao(p.inicio, p.fim);
-            }
-          }
-          const trabalhado = jornadaMin - pausaMin;
-          dadosTabela.push([
-            r.data,
-            `${r.inicioJornada} às ${r.fimJornada}`,
-            r.pausas?.map(p => `${p.inicio} às ${p.fim}`).join(', ') || '--',
-            formatarTempo(trabalhado)
-          ]);
-        }
-      }
-
-      if (dadosTabela.length === 0) {
-        alert("Nenhum registro encontrado para exportar.");
-        return;
-      }
-
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-
-      doc.setFontSize(18);
-      doc.text("Relatório de Jornada", 14, 20);
-
-      doc.autoTable({
-        head: [['Data', 'Jornada', 'Pausas', 'Total Trabalhado']],
-        body: dadosTabela,
-        startY: 30,
-        styles: { fontSize: 12 }
-      });
-
-      doc.save("jornada.pdf");
-    }
-function copiarChavePix() {
-    const chavePix = '49d0c7a5-d9e8-460d-b68c-bafd981bb69a';
-    navigator.clipboard.writeText(chavePix).then(() => {
-      alert('Chave PIX copiada para a área de transferência!');
-    }).catch(err => {
-      alert('Erro ao copiar a chave PIX: ' + err);
-    });
   }
-  </script>
-</body>
+}
+
+function editarRegistro(indice) {
+  const registros = JSON.parse(localStorage.getItem('registros')) || [];
+  const r = registros[indice];
+  const [dia, mes, ano] = r.data.split('/');
+  document.getElementById('data').value = `20${ano}-${mes.padStart(2, '0')}-${dia.padStart(2, '0')}`;
+  document.getElementById('inicioJornada').value = r.inicioJornada;
+  document.getElementById('fimJornada').value = r.fimJornada;
+  document.getElementById('pausasContainer').innerHTML = '';
+  if (Array.isArray(r.pausas)) r.pausas.forEach(p => adicionarPausa(p.inicio, p.fim));
+  window.scrollTo({ top: 0, behavior: 'smooth' });
+  const btnSalvar = document.querySelector('button[onclick^="salvarRegistro"]');
+  btnSalvar.onclick = () => {
+    registros[indice] = {
+      data: r.data,
+      inicioJornada: document.getElementById('inicioJornada').value,
+      fimJornada: document.getElementById('fimJornada').value,
+      pausas: Array.from(document.querySelectorAll('.pausa')).map(p => ({
+        inicio: p.querySelector('.inicioPausa').value,
+        fim: p.querySelector('.fimPausa').value
+      }))
+    };
+    localStorage.setItem('registros', JSON.stringify(registros));
+    alert("Registro editado com sucesso!");
+    mostrarRegistros();
+    limparCampos();
+    btnSalvar.onclick = salvarRegistro;
+  };
+}
+</script></body>
 </html>
