--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <title>Calculadora de Jornada</title>
@@ -43,23 +42,32 @@
     .pausa { margin-top:10px; display:flex; align-items:center; gap:10px; }
     .pausa input { width:45%; height:80px; }
     .pausa button { height:80px; font-size:30px; }
+    .listagem {
+      background: white;
+      border: 2px solid black;
+      max-height: 70vh;
+      overflow-y: scroll;
+      margin: 20px;
+      padding: 10px;
+      font-size: 30px;
+    }
   </style>
 </head>
 <body>
 <header><h1>Calculadora de horas extras</h1></header>
 <h2>Registrar Jornada</h2>
 <div class="mural">
-<label>Data:<input type="date" id="data"></label>
-<label>Início da jornada:<input type="time" id="inicioJornada"></label>
-<label>Fim da jornada:<input type="time" id="fimJornada"></label>
-<label>Pausas:
-<div id="pausasContainer">
-<div class="pausa">
-<input type="time" class="inicioPausa"> às <input type="time" class="fimPausa">
-</div>
-</div>
-<button type="button" onclick="adicionarPausa()">➕ Nova Pausa</button>
-</label>
+  <label>Data:<input type="date" id="data"></label>
+  <label>Início da jornada:<input type="time" id="inicioJornada"></label>
+  <label>Fim da jornada:<input type="time" id="fimJornada"></label>
+  <label>Pausas:
+    <div id="pausasContainer">
+      <div class="pausa">
+        <input type="time" class="inicioPausa"> às <input type="time" class="fimPausa">
+      </div>
+    </div>
+    <button type="button" onclick="adicionarPausa()">➕ Nova Pausa</button>
+  </label>
 </div>
 <button onclick="salvarRegistro()">Salvar</button>
 <label>Valor da hora extra (R$):<input type="number" step="0.01" id="valorHoraExtra" value="19,60"></label>
@@ -68,132 +76,23 @@
 <button onclick="mostrarRegistros()">Consultar</button>
 <button onclick="apagarTodosRegistros()">Apagar Todos</button>
 <button onclick="exportarParaPDF()">Exportar para PDF</button>
+<button style="background:red; color:white;" onclick="verTodosRegistros()">⚠️ Ver Todos os Dados</button>
 <div id="registros"></div>
 <div class="resultado" id="resumo"></div>
+<div id="listaCompleta" class="listagem" style="display:none;"></div>
 <footer>Sistema criado por Paulo Renato
-<h4 class="apoio">ajude a aprimorar e desenvolver mais app como este, qualquer valor será muito bem vindo!</h4>
-<button class="pix" onclick="copiarChavePix()">Copiar chave PIX</button>
+  <h4 class="apoio">ajude a aprimorar e desenvolver mais app como este, qualquer valor será muito bem vindo!</h4>
+  <button class="pix" onclick="copiarChavePix()">Copiar chave PIX</button>
 </footer>
 <script>
-function adicionarPausa(inicio='', fim='') {
-  const container = document.getElementById('pausasContainer');
-  const div = document.createElement('div');
-  div.className = 'pausa';
-  div.innerHTML = '<input type="time" class="inicioPausa" value="'+inicio+'"> às <input type="time" class="fimPausa" value="'+fim+'"><button type="button" onclick="this.parentElement.remove()">❌</button>';
-  container.appendChild(div);
-}
-function limparCampos() {
-  document.getElementById('data').value = '';
-  document.getElementById('inicioJornada').value = '';
-  document.getElementById('fimJornada').value = '';
-  document.getElementById('valorHoraExtra').value = '';
-  document.getElementById('pausasContainer').innerHTML = '<div class="pausa"><input type="time" class="inicioPausa"> às <input type="time" class="fimPausa"></div>';
-}
-function salvarRegistro() {
-  const dataRaw = document.getElementById('data').value;
-  if (!dataRaw) return alert("Informe a data!");
-  const [ano, mes, dia] = dataRaw.split('-');
-  const data = dia+"/"+mes+"/"+ano.slice(2);
-  const inicioJornada = document.getElementById('inicioJornada').value;
-  const fimJornada = document.getElementById('fimJornada').value;
-  const pausas = [];
-  document.querySelectorAll('.pausa').forEach(p => {
-    const inicio = p.querySelector('.inicioPausa').value;
-    const fim = p.querySelector('.fimPausa').value;
-    if (inicio && fim) pausas.push({inicio, fim});
-  });
-  if (!inicioJornada || !fimJornada) return alert("Preencha os horários corretamente!");
-  const registros = JSON.parse(localStorage.getItem('registros')) || [];
-  registros.push({data, inicioJornada, fimJornada, pausas});
-  localStorage.setItem('registros', JSON.stringify(registros));
-  alert("Registro salvo com sucesso!");
-  limparCampos();
-}
-function calcularDuracao(inicio, fim) {
-  const [hi, mi] = inicio.split(':').map(Number);
-  const [hf, mf] = fim.split(':').map(Number);
-  return (hf*60 + mf) - (hi*60 + mi);
-}
-function formatarTempo(minutos) {
-  const h = String(Math.floor(minutos/60)).padStart(2,'0');
-  const m = String(minutos%60).padStart(2,'0');
-  return h+':'+m;
-}
-function mostrarRegistros() {
-  const mesConsulta = document.getElementById('mesConsulta').value;
-  if (!mesConsulta) return alert("Selecione um mês.");
-  const [ano, mes] = mesConsulta.split('-').map(Number);
-  const dataInicio = new Date(ano, mes-1, 16);
-  const dataFim = new Date(ano, mes, 15);
-  const registros = JSON.parse(localStorage.getItem('registros')) || [];
-  const container = document.getElementById('registros');
-  const resumo = document.getElementById('resumo');
-  container.innerHTML = '';
-  let totalMin = 0;
-  for (const r of registros) {
-    const [dia, mesR, anoR] = r.data.split('/').map(Number);
-    const dataRegistro = new Date(2000+anoR, mesR-1, dia);
-    if (dataRegistro >= dataInicio && dataRegistro <= dataFim) {
-      const jornadaMin = calcularDuracao(r.inicioJornada, r.fimJornada);
-      const pausaMin = r.pausas.reduce((acc,p) => acc + calcularDuracao(p.inicio,p.fim), 0);
-      const trabalhado = jornadaMin - pausaMin;
-      container.innerHTML += '<div class="registro"><strong>'+r.data+'</strong><br>Jornada: '+r.inicioJornada+' às '+r.fimJornada+'<br>Pausas:<br>'+r.pausas.map(p => p.inicio+' às '+p.fim).join('<br>')+'<br>Trabalhado: '+formatarTempo(trabalhado)+'<br><button onclick="editarRegistro('+registros.indexOf(r)+')">✏️ Editar</button><button onclick="excluirRegistro('+registros.indexOf(r)+')">🗑️ Excluir</button></div>';
-      totalMin += trabalhado;
-    }
-  }
-}
-function editarRegistro(indice) {
-  const registros = JSON.parse(localStorage.getItem('registros')) || [];
-  const r = registros[indice];
-  const [dia, mes, ano] = r.data.split('/');
-  document.getElementById('data').value = `20${ano}-${mes.padStart(2,'0')}-${dia.padStart(2,'0')}`;
-  document.getElementById('inicioJornada').value = r.inicioJornada;
-  document.getElementById('fimJornada').value = r.fimJornada;
-  document.getElementById('pausasContainer').innerHTML = '';
-  r.pausas.forEach(p => adicionarPausa(p.inicio,p.fim));
-}
-function excluirRegistro(indice) {
-  const registros = JSON.parse(localStorage.getItem('registros')) || [];
-  if (confirm("Deseja excluir este registro?")) {
-    registros.splice(indice, 1);
-    localStorage.setItem('registros', JSON.stringify(registros));
-    mostrarRegistros();
-  }
-}
-function apagarTodosRegistros() {
-  if (confirm("Deseja apagar todos os registros?")) {
-    localStorage.removeItem('registros');
-    document.getElementById('registros').innerHTML = '';
-    document.getElementById('resumo').innerHTML = '';
-  }
-}
-function exportarParaPDF() {
-  const mesConsulta = document.getElementById('mesConsulta').value;
-  if (!mesConsulta) return alert("Selecione um mês.");
-  const [ano, mes] = mesConsulta.split('-').map(Number);
-  const dataInicio = new Date(ano, mes-1, 16);
-  const dataFim = new Date(ano, mes, 15);
-  const registros = JSON.parse(localStorage.getItem('registros')) || [];
-  const dadosTabela = [];
-  registros.forEach(r => {
-    const [dia, mesR, anoR] = r.data.split('/').map(Number);
-    const dataRegistro = new Date(2000+anoR, mesR-1, dia);
-    if (dataRegistro >= dataInicio && dataRegistro <= dataFim) {
-      const jornadaMin = calcularDuracao(r.inicioJornada, r.fimJornada);
-      const pausaMin = r.pausas.reduce((acc,p) => acc + calcularDuracao(p.inicio,p.fim), 0);
-      const trabalhado = jornadaMin - pausaMin;
-      dadosTabela.push([r.data, r.inicioJornada+' às '+r.fimJornada, r.pausas.map(p => p.inicio+' às '+p.fim).join(', '), formatarTempo(trabalhado)]);
-    }
-  });
-  if (dadosTabela.length===0) return alert("Nenhum registro encontrado!");
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF();
-  doc.text("Relatório de Jornada",14,20);
-  doc.autoTable({head:[['Data','Jornada','Pausas','Total Trabalhado']],body:dadosTabela,startY:30});
-  doc.save("jornada.pdf");
-}
-function copiarChavePix() {
-  navigator.clipboard.writeText('49d0c7a5-d9e8-460d-b68c-bafd981bb69a').then(() => alert('Chave PIX copiada!'));
+function verTodosRegistros() {
+  const dados = localStorage.getItem('registros');
+  const area = document.getElementById('listaCompleta');
+  if (!dados) return alert("Nenhum dado encontrado.");
+  const lista = JSON.parse(dados);
+  area.innerHTML = '<h3>Registros Salvos:</h3>' + lista.map(r => JSON.stringify(r)).join('<br><br>');
+  area.style.display = 'block';
+  window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
 }
 </script>
 </body>
