--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ function mostrarRegistros() {
   const mesConsulta = document.getElementById('mesConsulta').value;
   if (!mesConsulta) return alert("Selecione um mês.");
   const [ano, mes] = mesConsulta.split('-').map(Number);
-  const dataInicio = new Date(ano, mes - 1, 16);
+  const dataInicio = new Date(ano, mes, 16);
   const dataFim = new Date(ano, mes, 15);
   const registros = JSON.parse(localStorage.getItem('registros')) || [];
   const container = document.getElementById('registros');
@@ -147,7 +147,7 @@ function mostrarRegistros() {
   let totalExtrasMin = 0;
   for (const r of registros) {
     const [dia, mesR, anoR] = r.data.split('/').map(Number);
-    const dataRegistro = new Date(2000 + anoR, mesR, dia);
+    const dataRegistro = new Date(2000 + anoR, mesR - 1, dia);
     if (dataRegistro >= dataInicio && dataRegistro <= dataFim) {
       const jornadaMin = calcularDuracao(r.inicioJornada, r.fimJornada);
       let pausaMin = 0;
