--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function mostrarRegistros() {
     }
   }
   const valorExtras = parseFloat(document.getElementById('valorHoraExtra').value) || 0;
-  const diasNoPeriodo = (dataFim - dataInicio) / (1000 * 60 * 60 * 24) + 1;
+  const diasNoPeriodo = (dataFim - dataInicio) / (1000 * 60 * 60 * 24);
   const limiteMinutos = diasNoPeriodo >= 31 ? 194 * 60 + 51 : 189 * 60 + 34;
   if (totalMinutos > limiteMinutos) totalExtrasMin = totalMinutos - limiteMinutos;
   resumo.innerHTML = `Total trabalhado: ${formatarTempo(totalMinutos)}<br>Horas extras: ${formatarTempo(totalExtrasMin)}<br>Valor horas extras: R$ ${(totalExtrasMin / 60 * valorExtras).toFixed(2)}`;
